# jetstream-turbo

./: .gitignore  .tool-versions  AGENTS.md  LEAVING_OFF.md  PLANNING.md  README.md  autoresearch.jsonl  docker-compose.yml
.beads/: issues.jsonl
.beads/backup/: backup_state.json  config.jsonl
.github/workflows/: benchmarks.yml  deploy-monitor.yml  deploy-turbo.yml  enforce-turbostream-pr.yml  release.yaml.bak  scan.yaml
monitor/: .env.example  .gitignore  Cargo.toml
monitor/.playwright-cli/: page-2026-03-02T23-34-28-625Z.yml  page-2026-03-02T23-39-45-282Z.yml
monitor/deploy/: setup-caddy.sh
monitor/deploy/systemd/: jetstream-monitor.service
monitor/frontend/: components.json  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
monitor/frontend/src/: App.tsx  index.css  main.tsx
monitor/frontend/src/components/: Charts.tsx  ConnectionBanner.tsx  DeltaCard.tsx  Header.tsx  MetricsTable.tsx  StatusIndicator.tsx  StreamCard.tsx  rateAxis.ts
monitor/frontend/src/components/ui/: dropdown-menu.tsx  mode-toggle.tsx  theme-provider.tsx
monitor/frontend/src/hooks/: useStream.ts
monitor/frontend/src/lib/: uptime.ts
monitor/frontend/tests/: format-y-axis-tick.test.ts  rate-axis-numeric-ordering.test.ts
monitor/src/: config.rs  lib.rs  main.rs
monitor/src/frontend/: app.rs
monitor/src/frontend/components/: mod.rs
monitor/src/stats/: aggregator.rs  mod.rs
monitor/src/storage/: mod.rs  sqlite.rs
monitor/src/stream/: client.rs  mod.rs
monitor/src/websocket/: broadcast.rs  mod.rs
monitor/static/: index.html
python/: Dockerfile  Dockerfile.dev  README.md  pyproject.toml
python/src/social/graze/jetstream_turbo/app/: __main__.py  bluesky_api.py  client.py  config.py  graze_api.py  hydration.py  turbocharger.py
rust/: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  TESTING.md  autoresearch.checks.sh  autoresearch.ideas.md  autoresearch.jsonl  autoresearch.md  autoresearch.sh  docker-compose.yml
rust/.github/workflows/: benchmarks.yml  deploy.yml
rust/_autoresearch-old/: autoresearch.ideas.2.md  autoresearch.ideas.md  autoresearch.jsonl  autoresearch.md
rust/benches/: Cargo.toml  hydration_benchmark.rs  pipeline_benchmark.rs
rust/benches/baselines/: batch_enriched_record_creation.json  batch_message_creation.json  cache_bulk_get_posts.json  cache_bulk_get_user_profiles.json  cache_post_get.json  cache_post_set.json  cache_user_profile_get.json  cache_user_profile_set.json  enriched_record_extract_uris.json  enriched_record_new.json  enriched_record_with_profile.json  new.json  serde_json_deserialize_message.json  serde_json_deserialize_profile.json  serde_json_serialize_enriched_record.json  serde_json_serialize_message.json  serde_json_serialize_profile.json  sqlite_batch_store.json  sqlite_store_record.json
rust/data_store/: jetstream.db  jetstream.db-shm  jetstream.db-wal
rust/deploy/: setup-caddy.sh
rust/deploy/systemd/: jetstream-turbo.service
rust/scripts/benchmarks/: check.sh  flamegraph.sh  update.sh
rust/src/: lib.rs  main.rs
rust/src/client/: auth.rs  bluesky.rs  graze.rs  jetstream.rs  mod.rs  pool.rs  pool_bluesky.rs
rust/src/config/: environment.rs  mod.rs  settings.rs
rust/src/hydration/: batch.rs  cache.rs  fetcher.rs  hydrator.rs  mod.rs
rust/src/models/: bluesky.rs  enriched.rs  errors.rs  jetstream.rs  mod.rs
rust/src/server/: mod.rs
rust/src/storage/: mod.rs  redis.rs  rotation.rs  s3.rs  sqlite.rs
rust/src/telemetry/: error_reporter.rs  mod.rs
rust/src/testing/: fixtures.rs  mocks.rs  mod.rs
rust/src/turbocharger/: buffer.rs  coordinator.rs  mod.rs  orchestrator.rs
rust/src/utils/: interned_string.rs  logging.rs  metrics.rs  mod.rs  retry.rs  serde_utils.rs
rust/tests/: Cargo.toml  integration_tests.rs  pipeline_integration_test.rs
src/social/graze/jetstream_turbo/app/: egress.py  remote_storage.py
