[package]
name = "jetstream-turbo-benches"
version = "0.1.0"
edition = "2021"
publish = false

[[bench]]
name = "hydration_benchmark"
harness = false

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio = { version = "1.40", features = ["full"] }
jetstream-turbo = { path = ".." }
tempfile = "3.12"