[package]
name = "jetstream-turbo-tests"
version = "0.1.0"
edition = "2021"
publish = false

[[test]]
name = "integration_tests"
path = "integration_tests.rs"

[dev-dependencies]
tokio = { version = "1.40", features = ["full"] }
jetstream-turbo = { path = ".." }
wiremock = "0.6"
tempfile = "3.12"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1.11", features = ["v4"] }